fix crt landing card spacing

--- a/crt_portal/static/sass/custom/landing.scss
+++ b/crt_portal/static/sass/custom/landing.scss
@@ -479,7 +479,7 @@ $arrow-height: 24px;
   a {
     font-weight: bold;
   }
-  margin-bottom: 1rem;
+  padding: 1.5rem 2rem !important;
 }
 
 .crt-landing--arrow {
